Update commit before pull --LZ

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="/lib/javascript/jquery/plugins/tablesorter-master/css/theme.default.css"  media="all" type="text/css" />
         <link rel="stylesheet" href="/lib/css/ws_tester.css" type="text/css" />
 
-        <script type="text/javascript" language="javascript" src="/lib/javascript/jquery/jquery-2.1.0-beta2.js"></script>
+        <script type="text/javascript" language="javascript" src="/lib/javascript/jquery/jquery-1.11.0-rc1.js"></script>
         <script type="text/javascript" language="javascript" src="/lib/javascript/jquery/jquery-ui.min.js"></script>
         <script type="text/javascript" language="javascript" src="/lib/javascript/spin.min.js"></script>
         <script type="text/javascript" language="javascript" src="/lib/javascript/jquery/plugins/jquery.spin/jquery.spin.js"></script>
@@ -17,6 +17,7 @@
         <script type="text/javascript" language="javascript" src="/lib/javascript/jquery/plugins/tablesorter-master/js/jquery.tablesorter.min.js"></script>
         <script type="text/javascript" language="javascript" src="/lib/javascript/jquery/plugins/tablesorter-master/js/jquery.tablesorter.widgets.min.js"></script>
         <script type="text/javascript" language="javascript" src="/lib/javascript/jquery/plugins/tablesorter-master/addons/pager/jquery.tablesorter.pager.min.js"></script>
+        <script type="text/javascript" language="javascript" src="/lib/javascript/beautify-html.js"></script>
         <script type="text/javascript" language="javascript" src="/lib/javascript/vkbeautify.js"></script>
         <script type="text/javascript" language="javascript" src="/lib/javascript/moment.min.js"></script>
         
