--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="/lib/javascript/jquery/plugins/tablesorter-master/css/theme.default.css"  media="all" type="text/css" />
         <link rel="stylesheet" href="/lib/css/ws_tester.css" type="text/css" />
 
-        <script type="text/javascript" language="javascript" src="/lib/javascript/jquery/jquery-1.11.0-rc1.js"></script>
+        <script type="text/javascript" language="javascript" src="/lib/javascript/jquery/jquery-1.11.0.min.js"></script>
         <script type="text/javascript" language="javascript" src="/lib/javascript/jquery/jquery-ui.min.js"></script>
         <script type="text/javascript" language="javascript" src="/lib/javascript/spin.min.js"></script>
         <script type="text/javascript" language="javascript" src="/lib/javascript/jquery/plugins/jquery.spin/jquery.spin.js"></script>
@@ -20,6 +20,7 @@
         <script type="text/javascript" language="javascript" src="/lib/javascript/beautify-html.js"></script>
         <script type="text/javascript" language="javascript" src="/lib/javascript/vkbeautify.js"></script>
         <script type="text/javascript" language="javascript" src="/lib/javascript/moment.min.js"></script>
+        <script type="text/javascript" language="javascript" src="/lib/javascript/html2canvas.js"></script>
         
 
         <script type="text/javascript" language="javascript" src="/lib/javascript/spin.min.js"></script>
